force-app/main/default/objects/Lead/fields/ELLISPHERE__Elli_ActivityTypeAndCode__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__Elli_ActivityTypeAndCode__c</fullName>
    <label>APE 2008</label>
    <length>255</length>
    <type>Text</type>
</CustomField>