force-app/main/default/objects/Lead/fields/ELLISPHERE__Elli_Business_Name__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__Elli_Business_Name__c</fullName>
    <label>Raison Sociale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>