force-app/main/default/objects/Lead/fields/ELLISPHERE__Elli_CapitalInformation__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__Elli_CapitalInformation__c</fullName>
    <label>Capital Social</label>
    <length>255</length>
    <type>Text</type>
</CustomField>