force-app/main/default/objects/Lead/fields/ELLISPHERE__Elli_EstablishmentClosingDate__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__Elli_EstablishmentClosingDate__c</fullName>
    <label>Date de fermeture de l&apos;établissement</label>
    <type>Date</type>
</CustomField>