force-app/main/default/objects/Lead/fields/ELLISPHERE__Elli_IdSrc__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__Elli_IdSrc__c</fullName>
    <label>Identifiant interne</label>
    <length>255</length>
    <type>Text</type>
</CustomField>