force-app/main/default/objects/Lead/fields/ELLISPHERE__Elli_Industry__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__Elli_Industry__c</fullName>
    <description>Secteur d&apos;activité Ellisphere</description>
    <label>Secteur d&apos;activité</label>
    <length>255</length>
    <type>Text</type>
</CustomField>