force-app/main/default/objects/Lead/fields/ELLISPHERE__Elli_LegalForm__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__Elli_LegalForm__c</fullName>
    <label>Forme Juridique</label>
    <length>255</length>
    <type>Text</type>
</CustomField>