force-app/main/default/objects/Lead/fields/ELLISPHERE__Elli_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__Elli_Registration_Date__c</fullName>
    <label>Date d&apos;immatriculation</label>
    <type>Date</type>
</CustomField>