force-app/main/default/objects/Lead/fields/ELLISPHERE__Elli_Risk__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__Elli_Risk__c</fullName>
    <label>Risque</label>
    <length>255</length>
    <type>Text</type>
</CustomField>