force-app/main/default/objects/Lead/fields/ELLISPHERE__Elli_Siren__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__Elli_Siren__c</fullName>
    <description>SIREN de la société.</description>
    <label>SIREN</label>
    <length>11</length>
    <type>Text</type>
</CustomField>