force-app/main/default/objects/Lead/fields/ELLISPHERE__Elli_Siret__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__Elli_Siret__c</fullName>
    <label>SIRET</label>
    <length>14</length>
    <type>Text</type>
</CustomField>