force-app/main/default/objects/Lead/fields/ELLISPHERE__Elli_Social_Object__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__Elli_Social_Object__c</fullName>
    <label>Objet Social</label>
    <length>255</length>
    <type>Text</type>
</CustomField>