force-app/main/default/objects/Lead/fields/ELLISPHERE__Elli_State__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__Elli_State__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <label>Actif</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
                <label>Inactif</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>