force-app/main/default/objects/Lead/fields/ELLISPHERE__Elli_TCH_CountryCode__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__Elli_TCH_CountryCode__c</fullName>
    <label>Code Pays</label>
    <length>3</length>
    <type>Text</type>
</CustomField>