force-app/main/default/objects/Lead/fields/ELLISPHERE__Elli_TCH_EstablishmentStatus__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__Elli_TCH_EstablishmentStatus__c</fullName>
    <label>TCH Statut de l&apos;établissement</label>
    <length>20</length>
    <type>Text</type>
</CustomField>