force-app/main/default/objects/Lead/fields/ELLISPHERE__Elli_TCH_Statut__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__Elli_TCH_Statut__c</fullName>
    <label>TCH Statut</label>
    <length>20</length>
    <type>Text</type>
</CustomField>