force-app/main/default/objects/Lead/fields/ELLISPHERE__Elli_Tva_Number__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__Elli_Tva_Number__c</fullName>
    <label>Numéro TVA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>