force-app/main/default/objects/Lead/fields/ELLISPHERE__Elli_Type_Of_Etablishment__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__Elli_Type_Of_Etablishment__c</fullName>
    <label>Type d&apos;établissement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Siège</fullName>
            </value>
            <value>
                <fullName>Etablissement secondaire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>