force-app/main/default/objects/Lead/fields/ELLISPHERE__Elli_UpdateDateTime__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__Elli_UpdateDateTime__c</fullName>
    <description>Date et heure de dernière actualisation via les services Ellisphere</description>
    <label>Date dernière actualisation Ellisphere</label>
    <type>Date</type>
</CustomField>