force-app/main/default/objects/Lead/fields/ELLISPHERE__TCH_Elli_leadSource__c.field-meta.xml
<CustomField>
    <fullName>ELLISPHERE__TCH_Elli_leadSource__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Champs technique pour déterminer si la piste a été créée à partir du connecteur Ellisphere</description>
    <label>Provient du connecteur Ellisphere</label>
    <type>Checkbox</type>
</CustomField>