force-app/main/default/objects/Lead/fields/LD_AgenceRegionaleBW__c.field-meta.xml
<CustomField>
    <fullName>LD_AgenceRegionaleBW__c</fullName>
    <label>Agence régionale BW</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LD_EntiteBW__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>AgenceRegionaleBW</valueSetName>
    </valueSet>
</CustomField>