force-app/main/default/objects/Lead/fields/LD_CompteParent__c.field-meta.xml
<CustomField>
    <fullName>LD_CompteParent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte parent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pistes</relationshipLabel>
    <relationshipName>Pistes</relationshipName>
    <type>Lookup</type>
</CustomField>