force-app/main/default/objects/Lead/fields/LD_EntiteBW__c.field-meta.xml
<CustomField>
    <fullName>LD_EntiteBW__c</fullName>
    <label>Entité BW</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EntiteBW</valueSetName>
    </valueSet>
</CustomField>