force-app/main/default/objects/Lead/fields/LD_Fonction__c.field-meta.xml
<CustomField>
    <fullName>LD_Fonction__c</fullName>
    <label>Fonction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>Entretien Maintenance</fullName>
            </value>
            <value>
                <fullName>Projet/Ingénierie</fullName>
            </value>
            <value>
                <fullName>Achat/Logistique</fullName>
            </value>
            <value>
                <fullName>Commerce/Marketing</fullName>
            </value>
            <value>
                <fullName>Qualité</fullName>
            </value>
            <value>
                <fullName>R&amp;D</fullName>
            </value>
            <value>
                <fullName>Direction Générale</fullName>
            </value>
            <value>
                <fullName>Administratif/RH</fullName>
            </value>
            <value>
                <fullName>Autres</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>