force-app/main/default/objects/Lead/fields/LD_Interet__c.field-meta.xml
<CustomField>
    <fullName>LD_Interet__c</fullName>
    <label>Intérêt(s)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>