force-app/main/default/objects/Lead/fields/LD_NTVAIntracommunautaire__c.field-meta.xml
<CustomField>
    <fullName>LD_NTVAIntracommunautaire__c</fullName>
    <label>N° TVA Intracommunautaire</label>
    <length>15</length>
    <type>Text</type>
</CustomField>