force-app/main/default/objects/Lead/fields/LD_ProvenanceWeb__c.field-meta.xml
<CustomField>
    <fullName>LD_ProvenanceWeb__c</fullName>
    <description>Ce champ sera alimenté par le formulaire web présent sur le Site Web de Babcock-Wanson.</description>
    <label>Provenance Web</label>
    <length>255</length>
    <type>Text</type>
</CustomField>