force-app/main/default/objects/Lead/fields/LD_SecteurCommercial__c.field-meta.xml
<CustomField>
    <fullName>LD_SecteurCommercial__c</fullName>
    <label>Secteur Commercial</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LD_AgenceRegionaleBW__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>SecteurCommercial</valueSetName>
    </valueSet>
</CustomField>