force-app/main/default/objects/Lead/fields/LD_SIREN__c.field-meta.xml
<CustomField>
    <fullName>LD_SIREN__c</fullName>
    <label>SIREN</label>
    <length>9</length>
    <type>Text</type>
</CustomField>