force-app/main/default/objects/Lead/fields/LD_TypeDeClient__c.field-meta.xml
<CustomField>
    <fullName>LD_TypeDeClient__c</fullName>
    <label>Catégorie client</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>France</fullName>
            </value>
            <value>
                <fullName>Etranger</fullName>
            </value>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>Département outremer</fullName>
            </value>
            <value>
                <fullName>Intracommunautaire</fullName>
            </value>
            <value>
                <fullName>Etablissement secondaire</fullName>
            </value>
            <value>
                <fullName>A définir</fullName>
                <isActive>false</isActive>
                <label>A définir</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>