force-app/main/default/objects/Lead/fields/MotifDeLaDemande__c.field-meta.xml
<CustomField>
    <fullName>MotifDeLaDemande__c</fullName>
    <label>Motif de la demande</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Demande de devis</fullName>
            </value>
            <value>
                <fullName>Demande d&apos;information</fullName>
            </value>
            <value>
                <fullName>Inscription Newsletter</fullName>
            </value>
            <value>
                <fullName>Autres</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>