force-app/main/default/objects/Lead/fields/PIS_Commentaires__c.field-meta.xml
<CustomField>
    <fullName>PIS_Commentaires__c</fullName>
    <label>Commentaires</label>
    <type>TextArea</type>
</CustomField>