force-app/main/default/objects/Lead/fields/Tech_ProvenancePiste__c.field-meta.xml
<CustomField>
    <fullName>Tech_ProvenancePiste__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Cette case à cocher permet de signaler sur le compte que le compte provient d&apos;une piste.</description>
    <label>Tech_ProvenancePiste</label>
    <type>Checkbox</type>
</CustomField>