force-app/main/default/objects/Lead/validationRules/VR01_LD_EmailOuTelephone.validationRule-meta.xml
<ValidationRule>
    <fullName>VR01_LD_EmailOuTelephone</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				ISBLANK(Email),
				ISBLANK(Phone),
				 $User.USER_ByPassRegleValidation__c = FALSE
				)</errorConditionFormula>
    <errorMessage>Attention, vous devez obligatoirement renseigner l&apos;adresse email ou le numéro de téléphone du contact.</errorMessage>
</ValidationRule>