force-app/main/default/objects/Lead/validationRules/VR02_LD_EmailObligatoireConversion.validationRule-meta.xml
<ValidationRule>
    <fullName>VR02_LD_EmailObligatoireConversion</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				IsConverted = TRUE,
	   ISBLANK( Email ),
				 $User.USER_ByPassRegleValidation__c = FALSE)</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>Attention, pour convertir votre piste en contact vous devez obligatoirement renseigner une adresse email.</errorMessage>
</ValidationRule>