force-app/main/default/objects/Lead/validationRules/VR03_LD_SecteurActiviteConvertion.validationRule-meta.xml
<ValidationRule>
    <fullName>VR03_LD_SecteurActiviteConvertion</fullName>
    <active>true</active>
    <description>Bloque la conversion d’une piste si le secteur d&apos;activité n’est pas renseigné. En effet le secteur d&apos;activité est obligatoire lors de la création d&apos;un prospect.</description>
    <errorConditionFormula>AND( IsConverted = TRUE,
				 Ispickval(Industry, &quot; &quot;))</errorConditionFormula>
    <errorMessage>Vous devez renseigner le secteur d&apos;activité de l&apos;entreprise pour la conversion.</errorMessage>
</ValidationRule>