force-app/main/default/objects/Lead/validationRules/VR04_LD_ConversionProspect.validationRule-meta.xml
<ValidationRule>
    <fullName>VR04_LD_ConversionProspect</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
IsConverted = TRUE,
$User.USER_ByPassRegleValidation__c = FALSE,
				OR(
ISBLANK(PostalCode),
ISBLANK(City)
				))</errorConditionFormula>
    <errorMessage>Avant de convertir votre piste, merci de renseigner au minimum les éléments d&apos;adresse suivants : Code postal, Ville et Pays.</errorMessage>
</ValidationRule>