force-app/main/default/objects/Lead/validationRules/VR05_LD_ConversionLeadProspectSIREN.validationRule-meta.xml
<ValidationRule>
    <fullName>VR05_LD_ConversionLeadProspectSIREN</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISBLANK(LD_SIREN__c),
				 $User.USER_ByPassRegleValidation__c = FALSE,
				 IsConverted = TRUE,
				 NOT(ISBLANK(ConvertedAccountId)),
(OR( 
ISPICKVAL (CountryCode ,&quot;DE&quot;), 
ISPICKVAL (CountryCode,&quot;AT&quot;), 
ISPICKVAL (CountryCode,&quot;BE&quot;), 
ISPICKVAL (CountryCode,&quot;BG&quot;), 
ISPICKVAL (CountryCode,&quot;CY&quot;), 
ISPICKVAL (CountryCode,&quot;HR&quot;), 
ISPICKVAL (CountryCode,&quot;DK&quot;), 
ISPICKVAL (CountryCode,&quot;ES&quot;), 
ISPICKVAL (CountryCode,&quot;EE&quot;), 
ISPICKVAL (CountryCode,&quot;FI&quot;), 
ISPICKVAL (CountryCode,&quot;FR&quot;), 
ISPICKVAL (CountryCode,&quot;GR&quot;), 
ISPICKVAL (CountryCode,&quot;HU&quot;), 
ISPICKVAL (CountryCode,&quot;IE&quot;), 
ISPICKVAL (CountryCode,&quot;IT&quot;), 
ISPICKVAL (CountryCode,&quot;LV&quot;), 
ISPICKVAL (CountryCode,&quot;LT&quot;), 
ISPICKVAL (CountryCode,&quot;MT&quot;), 
ISPICKVAL (CountryCode,&quot;LU&quot;), 
ISPICKVAL (CountryCode,&quot;NL&quot;), 
ISPICKVAL (CountryCode,&quot;PL&quot;), 
ISPICKVAL (CountryCode,&quot;PT&quot;), 
ISPICKVAL (CountryCode,&quot;CZ&quot;), 
ISPICKVAL (CountryCode,&quot;RO&quot;), 
ISPICKVAL (CountryCode,&quot;GB&quot;), 
ISPICKVAL (CountryCode,&quot;SK&quot;), 
ISPICKVAL (CountryCode,&quot;SI&quot;), 
ISPICKVAL (CountryCode,&quot;SE&quot;))))</errorConditionFormula>
    <errorMessage>Votre Piste étant dans l&apos;Union Européenne, merci d&apos;ajouter le SIREN</errorMessage>
</ValidationRule>