force-app/main/default/objects/Lead/listViews/AllOpenLeads.listView-meta.xml
<ListView>
    <fullName>AllOpenLeads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LD_EntiteBW__c</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.COUNTRY_CODE</columns>
    <filterScope>Everything</filterScope>
    <label>Toutes les pistes en cours</label>
</ListView>